# 4-MyCollabrative-Project-SDS-CP036-powercast

advanced/submissions/team-members/Chi_Dennar/src/: data-analysis.ipynb
advanced/submissions/team-members/TeslimAdeyanju/: best_gru_model.h5  best_lstm_model.h5  data_utils.py  eda_utils.py
advanced/submissions/team-members/TeslimAdeyanju/modules/: week1_eda.py  week3_neural_networks.py
advanced/submissions/team-members/TeslimAdeyanju/powercast_organized/: .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  setup.py
advanced/submissions/team-members/TeslimAdeyanju/powercast_organized/config/: config.yml
advanced/submissions/team-members/TeslimAdeyanju/powercast_organized/docs/: QA.md
advanced/submissions/team-members/TeslimAdeyanju/powercast_organized/models/: best_dense_model.h5  best_dense_powercast_model.h5  best_gru_powercast_model.h5  best_lstm_powercast_model.h5
advanced/submissions/team-members/TeslimAdeyanju/powercast_organized/src/powercast/: __init__.py  cli.py
advanced/submissions/team-members/TeslimAdeyanju/powercast_project/: .gitignore  LICENSE  Makefile  README.md  question.ipynb  requirements.txt  setup.py
advanced/submissions/team-members/anis-batliwala/utils/: __init__.py  cyclical_time_features.py  lookback_windows.py  scale_continious_features.py  time_series_dataset.py
advanced/submissions/team-members/anis-batliwala/week-1/: exploratory-data-analysis.ipynb
advanced/submissions/team-members/anis-batliwala/week-2/: Report.md  feature-engineeringand-preprocessing.ipynb
advanced/submissions/team-members/art-turner/: comprehensive_analysis_summary.md  data_quality_report.md  data_quality_streamlined.py  dataset_metadata.json  environmental_analysis_results.md  environmental_analysis_streamlined.py  lag_effects_analysis_report.md  lag_effects_streamlined.py  temporal_analysis_final.py  week2_feature_engineering.py  week2_feature_engineering_final.py  week2_feature_engineering_report.md  week2_feature_engineering_streamlined.py
advanced/submissions/team-members/david-boules/: david-REPORT.md  david-eda.ipynb  david-feature_engineering.ipynb
advanced/submissions/team-members/duncan-gitau/: REPORT.md  SDS_CP037_PowerCast_Advanced.ipynb  SDS_CP037_PowerCast_Advanced.py
advanced/submissions/team-members/lakshay-yadav/: .gitignore  EDA.ipynb  lakshay-REPORT.md  requirements.txt
advanced/submissions/team-members/lakshay-yadav/assets/: phase1_eda_summary.json
beginner/: REPORT.md
beginner/submissions/team-members/anis-batliwala/common/: __init__.py  chronological_split.py  lag_and_rolling_statistics.py  linear_regression.py  load_data.py  persistence_model.py  sarimax.py  scale_features.py  time_based_features.py
beginner/submissions/team-members/anis-batliwala/week-2/: feature-engineering-and-preprocessing.ipynb  sarimax-model.ipynb
beginner/submissions/team-members/anis-batliwala/week-3/: model-development-and-experimentation.ipynb
beginner/submissions/team-members/girish-kulkarni/: README.md  SDS-CP036-powercast_Wk01_Report_Business.md
beginner/submissions/team-members/girish-kulkarni/code/: CodeReference.md
beginner/submissions/team-members/hoai-le/: exploratory-data-analysis.ipynb
beginner/submissions/team-members/kgirishv/: README.md
beginner/submissions/team-members/soniya-sharma/: requirements.txt  soniya_Report.md
beginner/submissions/team-members/soniya-sharma/week1/: soniya_week1_report.md
beginner/submissions/team-members/soniya-sharma/week2/: baseline_modeling.ipynb  preprocessing.ipynb  (+1 more)
(+11 files in other folders)
